--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ span {
 }
 
 .right {
-    background-image: url('/images/hero-desktop.jpg');
+   background-image: url('./images/hero-desktop.jpg');
     width: 100%;
     height: auto;
     
